--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+.idea/codeStyles/Project.xml
+.idea/*
+.idea/misc.xml
 .DS_Store
 /build
 /captures
