--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,11 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "voicerecognizer.in.voicerecognizer"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,6 +21,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'project.properties'
+    }
 }
 
 dependencies {
@@ -27,6 +41,25 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+//    compile 'com.google.cloud:google-cloud-translate:1.55.0'
+
+
+    implementation('com.google.cloud:google-cloud-translate:1.3.1') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'org.json', module: 'json'
+    }
+    annotationProcessor 'com.google.cloud:google-cloud-translate:1.3.1'
+
+//    compile ('com.google.apis:google-api-services-translate:v2-rev47-1.22.0') {
+//        exclude group: 'com.google.guava'
+//    }
+//    compile ('com.google.cloud:google-cloud-translate:0.5.0') {
+//        exclude group: 'io.grpc', module: 'grpc-all'
+//        exclude group: 'com.google.protobuf', module: 'protobuf-java'
+//        exclude group: 'com.google.api-client', module: 'google-api-client-appengine'
+//    }
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.jetbrains.anko:anko-common:0.9'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
