--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-*.iml
 .gradle
 /local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
 /.idea/workspace.xml
-.idea/codeStyles/Project.xml
-.idea/*
-.idea/misc.xml
+/.idea/libraries
 .DS_Store
 /build
-/captures
-.externalNativeBuild
+.idea/*
+*/build/*
+*.iml
+/.app/class_files.txt
+/.app/manifest-merger-production-release-report.txt
+/.app/mapping.txt
+/.app/proguard-project.txt
+/.app/seeds.txt
+/.app/unused.txt
+hs_err_pid*.log
+replay_pid*.log
